--- a/src/Components/styles/PostsPage.css
+++ b/src/Components/styles/PostsPage.css
@@ -1,3 +1,7 @@
+.main_page {
+  top: -60px;
+}
+
 .card {
   border: 1px solid #DADBDE;
   background: #fff;
@@ -39,7 +43,6 @@ h2 {
   font-size: 20px;
 }
 
-/* Delete button */
 .delbttn {
   background-color: red;
   color: white;
@@ -55,11 +58,10 @@ h2 {
   background-color: darkred;
 }
 
-/* Create Post button (ONLY this button) */
 .posts_app .create_btn {
   position: relative;
   top: 90px;
-  left: 670px;
+  left: 640px;
 
   background-color: black;
   color: white;
@@ -89,4 +91,18 @@ h2 {
 .posts_app .create_btn:focus-visible {
   outline: 3px solid rgba(99, 102, 241, 0.6);
   outline-offset: 3px;
+}
+
+.posts_app .create_btn {
+  display: inline-flex;
+  align-items: center;   /* centers icon + text vertically */
+  gap: 10px;
+}
+
+.create_icon {
+  border: 1px solid white;
+  border-radius: 10px;
+  display: flex;
+  align-items: center;   /* vertical center */
+  justify-content: center; /* horizontal center */
 }
